# xapi-rust-pub

./: Cargo.toml  README.md
src/: lib.rs  main.rs  xapi_definitions.rs
src/xapi_definitions/: commands_common.rs  commands_main.rs  commands_stream.rs
