[package]
name = "xtb"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
tokio = { version = "1", features = ["full"] }
rustls = { version = "0.23.14", default-features = false, features = ["std"] }
tokio-serde-json = "0.3"
tokio-serde = "0.9.0"
webpki-roots = "0.26.6"
tokio-rustls = "*"
pki-types = { package = "rustls-pki-types", version = "1.9.0" }
url = "*"
chrono ="*"
cliclack = "0.3.5"
