[package]
name = "xtb"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_repr = "0.1"
tokio = { version = "1.42.0", features = ["full"] }
rustls = { version = "0.23.19", default-features = false, features = ["std"] }
tokio-serde-json = "0.3"
tokio-serde = "0.9.0"
webpki-roots = "0.26.7"
tokio-rustls = "0.26.1"
pki-types = { package = "rustls-pki-types", version = "1.9.0" }
url = "2.5.4"
chrono ="0.4.39"
cliclack = "0.3.5"
uuid = { version = "1.2", features = ["v4"] }
pbkdf2 = { version = "0.12", features = ["simple"] }
rand_core = { version = "0.6", features = ["std"] }
